<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setResults"
        app:showAsAction="always|withText"
        android:title="@string/action_title_results"
        android:icon="@android:drawable/ic_menu_edit" />

    <item
        android:id="@+id/action_patientHistory"
        app:showAsAction="always|withText"
        android:title="@string/action_title_patientHistory"
        android:icon="@android:drawable/ic_menu_recent_history" />

    <item
        android:id="@+id/action_changeDate"
        app:showAsAction="ifRoom"
        android:title="@string/action_title_changeDate"
        android:icon="@android:drawable/ic_menu_my_calendar">
    </item>

    <item
        android:id="@+id/action_changeTime"
        app:showAsAction="ifRoom"
        android:title="@string/action_title_changeTime"
        android:icon="@android:drawable/ic_menu_rotate">
    </item>

    <item
        android:id="@+id/action_cancelAppointment"
        android:title="@string/action_title_cancelAppointment"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_delete" />

</menu>