<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_saveLocation"
        android:id="@+id/title_saveDataLocation" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/radio_button_use_device_storage"
            android:textAppearance="?android:textAppearanceLarge"
            android:checked="true"
            android:id="@+id/radioButton_useDeviceStorage"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/radio_button_use_sd_card"
            android:id="@+id/radioButton_use_sd_card"
            android:checked="false"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </RadioGroup>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_saveLocationChosen"
        android:id="@+id/button_saveLocationChosen" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding">

        <TextView
            android:id="@+id/textView_settings_syncLoginRegisterExplanation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/explanation_registerToSync"/>

        <Button
            android:id="@+id/button_settings_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_doLoginButton"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_settings_syncLoginRegisterExplanation"/>

        <Button
            android:id="@+id/button_settings_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_doRegisterText"
            android:layout_toRightOf="@+id/button_settings_login"
            android:layout_below="@id/textView_settings_syncLoginRegisterExplanation"/>

        <Button
            android:id="@+id/button_settings_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_settings_sync"
            android:layout_toRightOf="@+id/button_settings_register"
            android:layout_below="@id/textView_settings_syncLoginRegisterExplanation"
            android:enabled="false"/>
    </RelativeLayout>



</LinearLayout>