<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_saveLocation"
        android:id="@+id/title_saveDataLocation" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/radio_button_use_device_storage"
            android:checked="true"
            android:id="@+id/radioButton_useDeviceStorage" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_use_sd_card"
            android:id="@+id/radioButton_use_sd_card"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_saveLocationChosen"
        android:id="@+id/button_saveLocationChosen" />

</LinearLayout>