<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/root_add_patient_activity"
        android:minWidth="500dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_addPatient"
            android:id="@+id/addPatientTitle"
            style="g"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/takePictureLinearLayout"
            android:layout_below="@+id/addPatientTitle"
            android:layout_alignParentLeft="true">

            <ImageView
                android:id="@+id/newPatientImage"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/newPatientPicture"
                android:background="@drawable/ic_default_picture" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_takeNewPatientPicture"
                android:id="@+id/buttonTakeNewPatientPicture"
                android:layout_gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:id="@+id/takePatientDataLinearLayout"
            android:layout_below="@+id/addPatientTitle"
            android:layout_toRightOf="@+id/takePictureLinearLayout">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addPatientFristNameEditView"
                android:hint="@string/hint_patientFirstName" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addPatientLastNameEditView"
                android:hint="@string/hint_patientLastName" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/addPatientPhoneEditText"
                android:hint="@string/hint_patientPhone" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/addPatientAgeEditText"
                android:hint="@string/hint_patientAge" />

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_savePatient"
            android:id="@+id/buttonAddPatient"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/takePictureLinearLayout"/>
    </RelativeLayout>

</ScrollView>
